--- a/public/css/sanddance-app.css
+++ b/public/css/sanddance-app.css
@@ -128,7 +128,7 @@
 
 .sanddance-explorer-topbar .logo {
   color: #0078d4;
-  padding: 6px 0; }
+  padding: 6px 0 6px 10px; }
 
 .sanddance-explorer-topbar .logo svg {
   fill: #0078d4;
